--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,3 @@
-@import "override-variables";
-
-
-@import "bootstrap"; // @import "bootstrap-custom";
-@import "bootstrap/theme";
+@import "variables";
+@import "bootstrap";
+@import "overrides";
